# game-pwag

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
data/assets/duck/: duck.json
data/assets/fence/: fence.blend  fence.json  fence.mtl
data/assets/floor/: floor.json
data/assets/katana/: katana.blend  katana.json
data/assets/lamp/: lamp.blend  lamp.json
data/assets/tree/: tree.blend  tree.json
shaders/: basic.frag  basic.vert  posteffect.frag  posteffect.vert  wireframe.frag  wireframe.vert
src/: Box.cpp  Box.hpp  Camera.cpp  Camera.hpp  Duck.cpp  Duck.hpp  EngineUniforms.hpp  GameObject.cpp  GameObject.hpp  Player.cpp  Player.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  Shader.cpp  Texture.cpp  Texture.hpp  constants.h  main.cpp
